testsuite/tests/gadt/T3163.stderr

T3163.hs:8:5: error:
    Illegal polymorphic or qualified type: forall s1. s1
    In the definition of data constructor ‘Unreached’
    In the data type declaration for ‘Taker’
